--- a/about.qmd
+++ b/about.qmd
@@ -13,7 +13,7 @@ about:
       href: https://github.com/Sghizzus
 ---
 
-Sono Ivan Marino, e attualmente lavoro in U.P.I.P.A. come Referente in area Statistico Informatica. Ho diversi interessi: cerco di tenermi aggiornato con le attualità, mi piace viaggiare, giocare al computer o alla play ogni tanto, e approfondire tutto ciò che riguarda l'ambito scientifico, con focus particolare in statistica e Data Science.
+Sono Ivan Marino e attualmente lavoro in U.P.I.P.A. come Referente in area Statistico Informatica. Ho diversi interessi: cerco di tenermi aggiornato con le attualità, mi piace viaggiare, giocare al computer o alla play ogni tanto, e approfondire tutto ciò che riguarda l'ambito scientifico, con focus particolare in statistica e Data Science.
 
 ## Istruzione
 
