--- a/posts/sicurezza-e-degrado/index.qmd
+++ b/posts/sicurezza-e-degrado/index.qmd
@@ -12,6 +12,7 @@ draft: true
 library(tidyverse)
 library(DBI)
 library(duckdb)
+library(duckplyr)
 library(yaml)
 library(showtext)
 library(furrr)
@@ -84,114 +85,118 @@ data <- tbl(con, "sicurezza_e_degrado") |>
 ```
 
 ```{r}
+
+dmultinom <- function (x, size = NULL, prob, log = FALSE) {
+  s <- sum(prob)
+  prob <- prob/s
+  r <- lgamma(size + 1) + colSums(t(x) * log(prob) - lgamma(t(x) + 1))
+  if (log) 
+    r
+  else exp(r)
+}
+```
+
+```{r}
 #| cache: true
 
 plan(multisession)
 
-data |> 
-  group_by(provincia_codice) |> 
-  nest() |> 
-  future_pwalk(\(provincia_codice, data) {
-    
-    fit <- data |>
-      mutate(fit = pmap(
-        list(popolazione_residente_in_eta_0_14_anni,
-             popolazione_residente_in_eta_15_64_anni,
-             popolazione_residente_over64,
-             cittadini_residenti,
-             stranieri_residenti),
-        \(z1, z2, z3, M, N) {
-          
-          ddirichlet <- function(x, alpha, log = FALSE) {
-            
-            dens <- lgamma(sum(alpha)) - sum(lgamma(alpha)) + (alpha - 1) * log(x)
-            if (log == FALSE) 
-              dens <- exp(dens)
-            return(dens)
-            
-          }
-          
-          z <- c(z1, z2, z3)
-          
-          sim <- matrix(nrow = 10000, ncol = 9)
-          
-          names(sim) <- str_c(rep(c("x", "p", "q"), c(3, 3, 3)), rep(1:3, 3))
-          
-          LP <- double(10000)
-          
-          p <- sim[1, 4:6] <- z / (M + N)
-          q <- sim[1, 7:9] <- z / (M + N)
-          x <- sim[1, 1:3] <- as.vector(rmultinom(1, M, p))
-          
-          while (any(x > z)) {
-            x <- sim[1, 1:3] <- as.vector(rmultinom(1, M, p))
-          }
-          
-          y <- z - x
-          
-          LP[1] <- ddirichlet(p, rep(0.5, 3), log = TRUE) +
-            ddirichlet(q, rep(0.5, 3), log = TRUE) + 
-            dmultinom(x, M, p, log = TRUE) +
-            dmultinom(y, N, q, log = TRUE)
-          
-          for(i in 2:10000) {
-            
-            x_prop <- as.vector(rmultinom(1, M, p))
-            
-            while (any(x_prop > z)) {
-              x_prop <- as.vector(rmultinom(1, M, p))
-            }
-            
-            y_prop <- z - x_prop
-            
-            u <- runif(1)
-            
-            
-            if(log(u) <= dmultinom(y_prop, N, q, log = TRUE) - dmultinom(y, N, q, log = TRUE)) {
-              
-              x <- sim[i, 1:3] <- x_prop
-              y <- y_prop
-              
-            } else {
-              
-              sim[i, 1:3] <- sim[i - 1, 1:3]
-              
-            }
-            
-            
-            p <- sim[i, 4:6] <- as.vector(rdirichlet(1, x + 0.5))
-            q <- sim[i, 7:9] <- as.vector(rdirichlet(1, y + 0.5))
-            
-            LP[i] <- ddirichlet(p, rep(0.5, 3), log = TRUE) +
-              ddirichlet(q, rep(0.5, 3), log = TRUE) + 
-              dmultinom(x, M, p, log = TRUE) +
-              dmultinom(y, N, q, log = TRUE)
-            
-          }
-          
-          LML <- LML(theta = sim, LL = LP)
-          
-          tibble(
-            posterior = list(sim),
-            LML = LML
-          )
-          
-        }
-      ))
-    
-    write_dataset(fit, str_c("cittadini-residenti-distribution/provincia_codice=", provincia_codice, "/part-0"), format = "parquet") 
-    
-    remove(fit)
-    
-  }, .progress = TRUE,
-  .options = furrr_options(seed = TRUE))
 
-
-```
-
-```{r}
-
-fit |> 
-  group_by(provincia) |> 
-  write_dataset("cittadini-residenti-distribution", format = "parquet")
+fit_completely_different <- data |>
+  mutate(fit = future_pmap(
+    list(popolazione_residente_in_eta_0_14_anni,
+         popolazione_residente_in_eta_15_64_anni,
+         popolazione_residente_over64,
+         cittadini_residenti,
+         stranieri_residenti),
+    \(z1, z2, z3, M, N) {
+      
+      z <- c(z1, z2, z3)
+      
+      sim <- matrix(nrow = 1000, ncol = 6)
+      
+      colnames(sim) <- str_c(rep(c( "p", "q"), c(3, 3)), rep(1:3, 2))
+      
+      LP <- double(1000)
+      
+      p <- sim[1, 1:3] <- z / (sum(M + N))
+      q <- sim[1, 4:6] <- z / (sum(M + N))
+      
+      space <- expand_grid(
+        x_1 = pmax(0, z[1] - N):pmin(M, z[1]),
+        x_2 = (z[1] + z[2] - N - M):pmin(M, z[2])
+      ) |> 
+        filter(
+          x_2 >= pmax(0, z[1] + z[2] - x_1 - N),
+          x_2 <= pmin(M - x_1, z[2])
+        ) |> 
+        mutate(
+          x = map2(x_1, x_2, ~c(.x, .y, M - .x - .y)),
+          y = map(x, ~z - .)
+        )
+      
+      space_x <- space$x |> 
+        unlist() |> 
+        matrix(ncol = 3, byrow = TRUE)
+      
+      space_y <- space$y |> 
+        unlist() |> 
+        matrix(ncol = 3, byrow = TRUE)
+      
+      
+      prob <- dmultinom(space_x, M, p, log = TRUE) + dmultinom(space_y, N, q, log = TRUE)
+      
+      prob <- prob - max(prob)
+      
+      prob <- exp(prob)
+      
+      space_row_number <- sample(1:nrow(space_x), 1, prob = prob)
+      
+      x <- space_x[space_row_number, ]
+      
+      y <- z - x
+      
+      LP[1] <- ddirichlet(p, rep(1, 3), log = TRUE) +
+        ddirichlet(q, rep(1, 3), log = TRUE) + 
+        stats::dmultinom(x, M, p, log = TRUE) +
+        stats::dmultinom(y, N, q, log = TRUE)
+      
+      
+      
+      for(i in 2:1000) {
+        
+        prob <- dmultinom(space_x, M, p, log = TRUE) + dmultinom(space_y, N, q, log = TRUE)
+        
+        prob <- prob - max(prob)
+        
+        prob <- exp(prob)
+        
+        space_row_number <- sample(1:nrow(space_x), 1, prob = prob)
+        
+        x <- space_x[space_row_number, ]
+        
+        y <- z - x
+        
+        
+        p <- sim[i, 1:3] <- as.vector(rdirichlet(1, x + 1))
+        q <- sim[i, 4:6] <- as.vector(rdirichlet(1, y + 1))
+        
+        LP[i] <- ddirichlet(p, rep(1, 3), log = TRUE) +
+          ddirichlet(q, rep(1, 3), log = TRUE) + 
+          stats::dmultinom(x, M, p, log = TRUE) +
+          stats::dmultinom(y, N, q, log = TRUE)
+        
+      }
+      
+      LML <- LML(theta = sim[, -c(3, 6)], LL = LP)
+      
+      list(
+        posterior = sim,
+        LML = LML
+      )
+      
+    },
+    .progress = TRUE,
+    .options = furrr_options(seed = TRUE)
+  ))
 ```
